--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,4 @@ jobs:
       with:
         additional_build_params: -destination 'platform=iOS Simulator,name=iPhone 8,OS=15.2'
         additional_lint_params: --private
+        test: false
