--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@master
 #    - name: Switch XCode Version
 #      run: sudo xcode-select -s /Applications/Xcode_11.app
-    - name: Install Dependences
+    - name: Install Dependencies
       run: |
         cd Example
         pod repo update
