--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Test And Lint
 
-on: [push]
+on: [ push ]
 
 jobs:
   build:
@@ -9,8 +9,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@master
-#    - name: Switch XCode Version
-#      run: sudo xcode-select -s /Applications/Xcode_11.app
+    - uses: actions/cache@v2
+      with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pods-
     - name: Install Dependencies
       run: |
         cd Example
