--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,5 @@ jobs:
         pod repo update
         pod install
       shell: bash
-    - name: Test and Lint
-      uses: ty0x2333/cocoapods-action@master
-      with:
-        additional_build_params: -destination 'platform=iOS Simulator,name=iPhone 8,OS=15.2'
-        additional_lint_params: --private
-        test: false
+    - name: Lint
+      run: pod lib lint
