ci: run on synchronize & ready for review

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,13 @@
 name: Test And Lint
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types:
+      - synchronize
+      - ready_for_review
 
 jobs:
   build:
